<resources>
    <string name="app_name">Bla Bla Wild</string>
    <string name="action_settings">Settings</string>
    <string name="search_text">Rechercher</string>
    <string name="departure">Départ</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="price">Prix</string>
    <string name="publish">Publier</string>
    <string name="seekbutton">Rechercher</string>
    <string name="toast">Départ et/ou destination non renseignés</string>
    <string name="homepage">Rechercher un itinéraire</string>
    <string name="proposition">Proposer un voyage</string>
    <string name="message">nom</string>
    <string name="message1">prénom</string>
    <string name="search">search</string>
    <string name="datemissing">Vous n\'avez pas donné de date à votre voyage</string>
    <string name="submit">Soumettre</string>
    <string name="user_disconnect">Je me déconnecte</string>
    <string name="toastSignUpOk">Félicitations ! Bienvenue sur WildBuzz !</string>
    <string name="toastSignUpFail">Aie ! Quelquechose s\'est mal passé&#8230;</string>
    <string name="email_placeholder">Quel est ton email ?</string>
    <string name="password_placeholder">Ton mot de passe</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="no_account_text">Pas encore de compte ?</string>
    <string name="no_account">Créer mon compte</string>
</resources>