<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.wcs.blablawild.SigninActivity"
    tools:showIn="@layout/activity_signin">

    <EditText
        android:id="@+id/editTextSignInEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_placeholder" />

    <EditText
        android:id="@+id/editTextSignInPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextSignInEmail"
        android:layout_alignStart="@+id/editTextSignInEmail"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_placeholder" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/submit"
        android:layout_below="@+id/editTextSignInPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewToSignInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_text"
        android:layout_below="@+id/buttonSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <Button
        android:id="@+id/buttonToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/no_account" />
</RelativeLayout>
