<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.blablawild.SigninActivity">

    <EditText
        android:id="@+id/editTextSigninMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_placeholder"
        android:inputType="textPersonName"
        android:text="@string/email_placeholder"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="133dp" />

    <EditText
        android:id="@+id/editTextSigninPaswword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPersonName"
        android:text="@string/password_placeholder"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="203dp" />

    <Button
        android:id="@+id/buttonSubmitSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="292dp" />

    <Button
        android:id="@+id/buttonToSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tosignup"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="406dp" />
</android.support.constraint.ConstraintLayout>
